--- a/src/view/QuanLyKhachHangManager.fxml
+++ b/src/view/QuanLyKhachHangManager.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="610.0" prefWidth="1231.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.QuanLyKhachHangController">
+<AnchorPane layoutX="0.0" prefHeight="718.0" prefWidth="1024.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.QuanLyKhachHangController">
    <children>
       <Label layoutX="30.0" layoutY="106.0" prefHeight="27.0" prefWidth="132.0" text="Mã khách hàng">
          <font>
