--- a/src/view/ThongKeMonAn.fxml
+++ b/src/view/ThongKeMonAn.fxml
@@ -18,32 +18,35 @@
    <children>
       <Label layoutX="29.0" layoutY="143.0" text="Hay tìm các bàn được đặt:" visible="false" />
       <Label layoutX="768.0" layoutY="125.0" text="Doanh thu của món" />
-      <Label fx:id="lblTongDoanhThu" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1092.0" layoutY="125.0" prefHeight="7.0" prefWidth="156.0" text="999.999.999.999 Đ" />
+      <Label fx:id="lblTongDoanhThu" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1092.0" layoutY="125.0" prefHeight="7.0" prefWidth="156.0" text="0 Đ" />
       <Label layoutX="768.0" layoutY="202.0" text="Số phần được đặt và doanh thu theo xu hướng" />
       <Label layoutX="793.0" layoutY="277.0" prefHeight="17.0" prefWidth="105.0" text="Số phần" />
-      <Label fx:id="lblSoPhanDD7" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1162.0" layoutY="275.0" prefHeight="17.0" prefWidth="78.0" text="99.999.999" />
+      <Label fx:id="lblSoPhanDD7" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1162.0" layoutY="275.0" prefHeight="17.0" prefWidth="78.0" text="0" />
       <Button fx:id="btnDong" layoutX="1166.0" layoutY="647.0" mnemonicParsing="false" onAction="#dongGiaoDien" prefHeight="25.0" prefWidth="94.0" text="Đóng" textAlignment="CENTER" wrapText="true" />
-      <Label layoutX="30.0" layoutY="18.0" text="Thống kê thông tin về các món ăn đang bán">
+      <Label layoutX="20.0" layoutY="18.0" text="Thống kê thông tin về các món ăn đang bán">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TableView fx:id="lvMonAn" layoutX="26.0" layoutY="174.0" prefHeight="248.0" prefWidth="708.0">
+      <TableView fx:id="lvMonAn" layoutX="26.0" layoutY="174.0" prefHeight="248.0" prefWidth="715.0">
         <columns>
           <TableColumn fx:id="colThuHang" prefWidth="82.0" text="Mã món ăn" />
             <TableColumn fx:id="colTenMA" prefWidth="163.0" text="Tên món" />
             <TableColumn fx:id="colSoNguoi" prefWidth="99.0" text="Số người/phần" />
             <TableColumn fx:id="colDonGia" minWidth="0.0" prefWidth="98.0" text="Đơn giá" />
-            <TableColumn fx:id="colSoPhanDD" prefWidth="108.0" text="Số phần được đặt" />
-            <TableColumn fx:id="colTongDoanhThu" prefWidth="141.0" text="Tổng doanh thu" />
+            <TableColumn fx:id="colSoPhanDD" prefWidth="112.0" text="Số phần đặt" />
+            <TableColumn fx:id="colTongDoanhThu" prefWidth="127.0" text="Tổng doanh thu" />
         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
       </TableView>
-      <Label layoutX="768.0" layoutY="151.0" prefHeight="17.0" prefWidth="205.0" text="Số phần được đặt (từ trước đến nay)" wrapText="true" />
-      <Label layoutX="768.0" layoutY="176.0" prefHeight="17.0" prefWidth="205.0" text="Số bàn đặt món này (từ trước đến nay)" wrapText="true" />
+      <Label layoutX="768.0" layoutY="151.0" prefHeight="17.0" prefWidth="205.0" text="Số phần được đặt" wrapText="true" />
+      <Label layoutX="768.0" layoutY="176.0" prefHeight="17.0" prefWidth="205.0" text="Số bàn đặt món này" wrapText="true" />
       <Button fx:id="btnThongKe" layoutX="1048.0" layoutY="31.0" mnemonicParsing="false" onAction="#thongKeMonAn" prefHeight="39.0" prefWidth="191.0" text="Thống kê các món ăn" />
       <Separator layoutX="748.0" layoutY="119.0" orientation="VERTICAL" prefHeight="554.0" prefWidth="9.0" />
-      <Label fx:id="lblSoBanDatMon" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1091.0" layoutY="176.0" prefHeight="17.0" prefWidth="156.0" text="999.999.999" />
-      <Label fx:id="lblSoPhanDD" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1091.0" layoutY="151.0" prefHeight="17.0" prefWidth="156.0" text="999.999.999" />
+      <Label fx:id="lblSoBanDatMon" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1091.0" layoutY="176.0" prefHeight="17.0" prefWidth="156.0" text="0" />
+      <Label fx:id="lblSoPhanDD" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1091.0" layoutY="151.0" prefHeight="17.0" prefWidth="156.0" text="0" />
       <Label layoutX="25.0" layoutY="128.0" prefHeight="39.0" prefWidth="701.0" text="Lưu ý: Đơn giá ở đây là giá hiện tại, do đơn giá món có thể thay đổi theo thời gian, tổng doanh thu được tính dựa trên dữ liệu giá của món của tất cả những lần đặt trước. Chọn món trong danh sách để xem thống kê chi tiết hơn" wrapText="true">
          <font>
             <Font name="System Italic" size="12.0" />
@@ -51,47 +54,47 @@
       </Label>
       <Separator layoutX="18.0" layoutY="422.0" prefHeight="7.0" prefWidth="733.0" />
       <Label layoutX="793.0" layoutY="301.0" prefHeight="17.0" prefWidth="106.0" text="Doanh thu" />
-      <Label fx:id="lblSoPhanDD14" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="990.0" layoutY="275.0" prefHeight="17.0" prefWidth="78.0" text="99.999.999" />
+      <Label fx:id="lblSoPhanDD14" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="990.0" layoutY="275.0" prefHeight="17.0" prefWidth="78.0" text="0" />
       <Label layoutX="766.0" layoutY="330.0" text="Nhận xét xu hướng:" />
       <ImageView fx:id="imgHinhAnhMA" fitHeight="143.0" fitWidth="200.0" layoutX="26.0" layoutY="431.0" pickOnBounds="true" preserveRatio="true" />
-      <Label fx:id="lblDoanhThuMon7" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1136.0" layoutY="300.0" prefHeight="17.0" prefWidth="105.0" text="99.999.999.999 Đ" />
-      <Label fx:id="lblDoanhThuMon14" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="964.0" layoutY="300.0" prefHeight="17.0" prefWidth="105.0" text="99.999.999.999 Đ" />
+      <Label fx:id="lblDoanhThuMon7" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1125.0" layoutY="300.0" prefHeight="21.0" prefWidth="116.0" text="0" />
+      <Label fx:id="lblDoanhThuMon14" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="953.0" layoutY="300.0" prefHeight="21.0" prefWidth="116.0" text="0" />
       <Label alignment="CENTER_RIGHT" layoutX="912.0" layoutY="228.0" prefHeight="17.0" prefWidth="156.0" text="Kỳ trước" />
       <Label alignment="CENTER_RIGHT" layoutX="1091.0" layoutY="228.0" prefHeight="17.0" prefWidth="149.0" text="Kỳ này" textAlignment="RIGHT" />
       <Label layoutX="237.0" layoutY="436.0" text="Mã món ăn" />
       <Label layoutX="459.0" layoutY="436.0" text="Tên món ăn" />
-      <Label layoutX="237.0" layoutY="467.0" text="Số người / phần" />
+      <Label layoutX="237.0" layoutY="470.0" text="Số người / phần" />
       <Label layoutX="236.0" layoutY="496.0" text="Nguyên liệu" />
       <Label layoutX="30.0" layoutY="580.0" text="Mô tả món ăn" />
       <TextField fx:id="txtMaMA" editable="false" layoutX="345.0" layoutY="432.0" prefHeight="25.0" prefWidth="105.0" />
-      <TextField fx:id="txtTenMA" editable="false" layoutX="567.0" layoutY="432.0" prefHeight="25.0" prefWidth="171.0" />
-      <TextField fx:id="txtSoNguoi" editable="false" layoutX="345.0" layoutY="463.0" prefHeight="25.0" prefWidth="106.0" />
+      <TextField fx:id="txtTenMA" editable="false" layoutX="567.0" layoutY="432.0" prefHeight="31.0" prefWidth="149.0" />
+      <TextField fx:id="txtSoNguoi" editable="false" layoutX="345.0" layoutY="466.0" prefHeight="25.0" prefWidth="106.0" />
       <TextArea fx:id="txtNguyenLieu" editable="false" layoutX="237.0" layoutY="522.0" prefHeight="56.0" prefWidth="501.0" wrapText="true" />
       <TextArea fx:id="txtMoTaMA" editable="false" layoutX="29.0" layoutY="602.0" prefHeight="68.0" prefWidth="708.0" wrapText="true" />
-      <Label layoutX="459.0" layoutY="467.0" text="Đơn giá hiện tại" />
-      <TextField fx:id="txtDonGia" editable="false" layoutX="567.0" layoutY="463.0" />
-      <Label layoutX="722.0" layoutY="465.0" text="Đ" />
+      <Label layoutX="459.0" layoutY="470.0" text="Đơn giá hiện tại" />
+      <TextField fx:id="txtDonGia" editable="false" layoutX="567.0" layoutY="466.0" prefHeight="31.0" prefWidth="149.0" />
+      <Label layoutX="722.0" layoutY="471.0" text="Đ" />
       <TextArea fx:id="txtXuHuongAuto" editable="false" layoutX="766.0" layoutY="357.0" prefHeight="68.0" prefWidth="485.0" wrapText="true" />
       <Button fx:id="btnXuatExcel" layoutX="938.0" layoutY="647.0" mnemonicParsing="false" onAction="#xuatFileExcel" prefHeight="25.0" prefWidth="205.0" text="Xuất báo cáo ra file Excel" />
       <Label fx:id="lblNgay14" alignment="CENTER_RIGHT" layoutX="904.0" layoutY="247.0" prefHeight="17.0" prefWidth="164.0" text="1/6/2020 - 30/6/2020" />
       <Label fx:id="lblNgay7" alignment="CENTER_RIGHT" layoutX="1084.0" layoutY="247.0" prefHeight="17.0" prefWidth="156.0" text="1/7/2020 - 31/7/2020" textAlignment="RIGHT" />
       <Separator layoutX="18.0" layoutY="117.0" prefHeight="7.0" prefWidth="1242.0" />
-      <ComboBox fx:id="cmbChuKyNgay" layoutX="30.0" layoutY="51.0" prefHeight="25.0" prefWidth="200.0" />
-      <CheckBox fx:id="cbTuyChonKhoangNgay" layoutX="247.0" layoutY="55.0" mnemonicParsing="false" onAction="#coTuyChonKhoangNgay" prefHeight="17.0" prefWidth="156.0" text="Tùy chọn ngày tháng" />
-      <DatePicker fx:id="dpNgayFrom7" disable="true" layoutX="584.0" layoutY="50.0" />
-      <DatePicker fx:id="dpNgayTo7" disable="true" layoutX="855.0" layoutY="51.0" />
-      <DatePicker fx:id="dpNgayFrom14" disable="true" layoutX="584.0" layoutY="18.0" />
-      <DatePicker fx:id="dpNgayTo14" disable="true" layoutX="855.0" layoutY="19.0" />
+      <ComboBox fx:id="cmbChuKyNgay" layoutX="20.0" layoutY="51.0" prefHeight="25.0" prefWidth="200.0" />
+      <CheckBox fx:id="cbTuyChonKhoangNgay" layoutX="225.0" layoutY="56.0" mnemonicParsing="false" onAction="#coTuyChonKhoangNgay" prefHeight="21.0" prefWidth="173.0" text="Tùy chọn ngày tháng" />
+      <DatePicker fx:id="dpNgayFrom7" disable="true" layoutX="566.0" layoutY="50.0" prefHeight="31.0" prefWidth="173.0" />
+      <DatePicker fx:id="dpNgayTo7" disable="true" layoutX="837.0" layoutY="51.0" prefHeight="31.0" prefWidth="164.0" />
+      <DatePicker fx:id="dpNgayFrom14" disable="true" layoutX="566.0" layoutY="18.0" prefHeight="31.0" prefWidth="173.0" />
+      <DatePicker fx:id="dpNgayTo14" disable="true" layoutX="837.0" layoutY="19.0" prefHeight="31.0" prefWidth="164.0" />
       <Label fx:id="lblKyTruocDo" disable="true" layoutX="409.0" layoutY="23.0" text="Kỳ trước đó" />
-      <Separator layoutX="394.0" layoutY="12.0" orientation="VERTICAL" prefHeight="39.0" prefWidth="9.0" />
+      <Separator layoutX="394.0" layoutY="31.0" orientation="VERTICAL" prefHeight="39.0" prefWidth="9.0" />
       <Label fx:id="lblKyNay" disable="true" layoutX="409.0" layoutY="54.0" text="Kỳ này" />
       <Label fx:id="lblLuuYAdvanced" alignment="CENTER" layoutX="539.0" layoutY="83.0" prefHeight="27.0" prefWidth="508.0" text="Nếu không xác định kỳ trước, hệ thống tự chọn, chu kỳ liền kề trước đó cùng số ngày" visible="false" wrapText="true">
          <font>
             <Font name="System Italic" size="12.0" />
          </font>
       </Label>
-      <Label fx:id="lblNgayFrom14" disable="true" layoutX="518.0" layoutY="22.0" prefHeight="17.0" prefWidth="63.0" text="Từ ngày" />
-      <Label fx:id="lblNgayFrom7" disable="true" layoutX="518.0" layoutY="54.0" prefHeight="17.0" prefWidth="63.0" text="Từ ngày" />
+      <Label fx:id="lblNgayFrom14" disable="true" layoutX="500.0" layoutY="22.0" prefHeight="17.0" prefWidth="63.0" text="Từ ngày" />
+      <Label fx:id="lblNgayFrom7" disable="true" layoutX="500.0" layoutY="54.0" prefHeight="17.0" prefWidth="63.0" text="Từ ngày" />
       <Label fx:id="lblNgayTo14" disable="true" layoutX="768.0" layoutY="23.0" prefHeight="17.0" prefWidth="75.0" text="Đến ngày" />
       <Label fx:id="lblNgayTo7" disable="true" layoutX="768.0" layoutY="54.0" prefHeight="17.0" prefWidth="75.0" text="Đến ngày" />
       <Label fx:id="lblLuuYSimple" alignment="CENTER" layoutX="26.0" layoutY="83.0" prefHeight="27.0" prefWidth="508.0" text="Chu kỳ trước được tự chọn là chu kỳ liền kề trước đó cùng số ngày" wrapText="true">
