--- a/src/view/ThongKeMonAn.fxml
+++ b/src/view/ThongKeMonAn.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
@@ -14,20 +16,19 @@
 
 <AnchorPane prefHeight="686.0" prefWidth="1274.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ThongKeMonAnController">
    <children>
-      <CheckBox fx:id="cbBaoGomChuaThanhToan" layoutX="30.0" layoutY="55.0" mnemonicParsing="false" onAction="#baoGomChuaThanhToanChange" prefHeight="17.0" prefWidth="320.0" text="Bao gồm các gọi món của các bàn đặt chưa thanh toán" />
       <Label layoutX="29.0" layoutY="143.0" text="Hay tìm các bàn được đặt:" visible="false" />
-      <Label layoutX="768.0" layoutY="42.0" text="Doanh thu của món" />
-      <Label fx:id="lblTongDoanhThu" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1092.0" layoutY="42.0" prefHeight="7.0" prefWidth="156.0" text="999.999.999.999 Đ" />
-      <Label layoutX="768.0" layoutY="119.0" text="Số phần được đặt và doanh thu theo xu hướng" />
-      <Label layoutX="793.0" layoutY="146.0" prefHeight="17.0" prefWidth="238.0" text="+ Từ hôm nay đến ngày thứ 7 trở về trước" />
-      <Label fx:id="lblSoPhanDD7" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1040.0" layoutY="146.0" prefHeight="17.0" prefWidth="78.0" text="99.999.999" />
+      <Label layoutX="768.0" layoutY="125.0" text="Doanh thu của món" />
+      <Label fx:id="lblTongDoanhThu" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1092.0" layoutY="125.0" prefHeight="7.0" prefWidth="156.0" text="999.999.999.999 Đ" />
+      <Label layoutX="768.0" layoutY="202.0" text="Số phần được đặt và doanh thu theo xu hướng" />
+      <Label layoutX="793.0" layoutY="277.0" prefHeight="17.0" prefWidth="105.0" text="Số phần" />
+      <Label fx:id="lblSoPhanDD7" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1162.0" layoutY="275.0" prefHeight="17.0" prefWidth="78.0" text="99.999.999" />
       <Button fx:id="btnDong" layoutX="1166.0" layoutY="647.0" mnemonicParsing="false" onAction="#dongGiaoDien" prefHeight="25.0" prefWidth="94.0" text="Đóng" textAlignment="CENTER" wrapText="true" />
       <Label layoutX="30.0" layoutY="18.0" text="Thống kê thông tin về các món ăn đang bán">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <TableView fx:id="lvMonAn" layoutX="26.0" layoutY="125.0" prefHeight="278.0" prefWidth="708.0">
+      <TableView fx:id="lvMonAn" layoutX="26.0" layoutY="174.0" prefHeight="248.0" prefWidth="708.0">
         <columns>
           <TableColumn fx:id="colThuHang" prefWidth="82.0" text="Mã món ăn" />
             <TableColumn fx:id="colTenMA" prefWidth="163.0" text="Tên món" />
@@ -37,46 +38,67 @@
             <TableColumn fx:id="colTongDoanhThu" prefWidth="141.0" text="Tổng doanh thu" />
         </columns>
       </TableView>
-      <Label layoutX="768.0" layoutY="68.0" prefHeight="17.0" prefWidth="205.0" text="Số phần được đặt (từ trước đến nay)" wrapText="true" />
-      <Label layoutX="768.0" layoutY="93.0" prefHeight="17.0" prefWidth="205.0" text="Số bàn đặt món này (từ trước đến nay)" wrapText="true" />
-      <Button fx:id="btnThongKe" layoutX="371.0" layoutY="51.0" mnemonicParsing="false" onAction="#thongKeMonAn" prefHeight="25.0" prefWidth="171.0" text="Thống kê các món ăn" />
-      <Separator layoutX="748.0" layoutY="24.0" orientation="VERTICAL" prefHeight="649.0" prefWidth="0.0" />
-      <Label fx:id="lblSoBanDatMon" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1091.0" layoutY="92.0" prefHeight="17.0" prefWidth="156.0" text="999.999.999" />
-      <Label fx:id="lblSoPhanDD" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1091.0" layoutY="68.0" prefHeight="17.0" prefWidth="156.0" text="999.999.999" />
-      <Label layoutX="30.0" layoutY="81.0" prefHeight="39.0" prefWidth="708.0" text="Lưu ý: Đơn giá ở đây là giá hiện tại, do đơn giá món có thể thay đổi theo thời gian, tổng doanh thu được tính dựa trên dữ liệu giá của món của tất cả những lần đặt trước. Chọn món trong danh sách để xem thống kê chi tiết hơn" wrapText="true">
+      <Label layoutX="768.0" layoutY="151.0" prefHeight="17.0" prefWidth="205.0" text="Số phần được đặt (từ trước đến nay)" wrapText="true" />
+      <Label layoutX="768.0" layoutY="176.0" prefHeight="17.0" prefWidth="205.0" text="Số bàn đặt món này (từ trước đến nay)" wrapText="true" />
+      <Button fx:id="btnThongKe" layoutX="1048.0" layoutY="31.0" mnemonicParsing="false" onAction="#thongKeMonAn" prefHeight="39.0" prefWidth="191.0" text="Thống kê các món ăn" />
+      <Separator layoutX="748.0" layoutY="119.0" orientation="VERTICAL" prefHeight="554.0" prefWidth="9.0" />
+      <Label fx:id="lblSoBanDatMon" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1091.0" layoutY="176.0" prefHeight="17.0" prefWidth="156.0" text="999.999.999" />
+      <Label fx:id="lblSoPhanDD" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1091.0" layoutY="151.0" prefHeight="17.0" prefWidth="156.0" text="999.999.999" />
+      <Label layoutX="25.0" layoutY="128.0" prefHeight="39.0" prefWidth="701.0" text="Lưu ý: Đơn giá ở đây là giá hiện tại, do đơn giá món có thể thay đổi theo thời gian, tổng doanh thu được tính dựa trên dữ liệu giá của món của tất cả những lần đặt trước. Chọn món trong danh sách để xem thống kê chi tiết hơn" wrapText="true">
          <font>
             <Font name="System Italic" size="12.0" />
          </font>
       </Label>
-      <Separator layoutX="16.0" layoutY="404.0" prefHeight="7.0" prefWidth="733.0" />
-      <Label layoutX="793.0" layoutY="169.0" prefHeight="17.0" prefWidth="238.0" text="+ Từ ngày thứ 8 đến 14 trở về trước" />
-      <Label layoutX="793.0" layoutY="191.0" prefHeight="17.0" prefWidth="238.0" text="+ Từ ngày thứ 15 đến 21 trở về trước" />
-      <Label layoutX="793.0" layoutY="214.0" prefHeight="17.0" prefWidth="238.0" text="+ Từ ngày thứ 22 đến 28 trở về trước" />
-      <Label fx:id="lblSoPhanDD14" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1040.0" layoutY="169.0" prefHeight="17.0" prefWidth="78.0" text="99.999.999" />
-      <Label fx:id="lblSoPhanDD21" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1040.0" layoutY="192.0" prefHeight="17.0" prefWidth="78.0" text="99.999.999" />
-      <Label fx:id="lblSoPhanDD28" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1040.0" layoutY="214.0" prefHeight="17.0" prefWidth="78.0" text="99.999.999" />
-      <Label layoutX="766.0" layoutY="248.0" text="Nhận xét xu hướng:" />
-      <ImageView fx:id="imgHinhAnhMA" fitHeight="143.0" fitWidth="200.0" layoutX="26.0" layoutY="419.0" pickOnBounds="true" preserveRatio="true" />
-      <Label fx:id="lblDoanhThuMon7" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1142.0" layoutY="146.0" prefHeight="17.0" prefWidth="105.0" text="99.999.999.999 Đ" />
-      <Label fx:id="lblDoanhThuMon14" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1142.0" layoutY="169.0" prefHeight="17.0" prefWidth="105.0" text="99.999.999.999 Đ" />
-      <Label fx:id="lblDoanhThuMon21" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1142.0" layoutY="192.0" prefHeight="17.0" prefWidth="105.0" text="99.999.999.999 Đ" />
-      <Label fx:id="lblDoanhThuMon28" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1142.0" layoutY="214.0" prefHeight="17.0" prefWidth="105.0" text="99.999.999.999 Đ" />
-      <Label alignment="CENTER_RIGHT" layoutX="1040.0" layoutY="120.0" prefHeight="17.0" prefWidth="78.0" text="Số phần" />
-      <Label alignment="CENTER_RIGHT" layoutX="1170.0" layoutY="120.0" prefHeight="17.0" prefWidth="78.0" text="Doanh thu" textAlignment="RIGHT" />
-      <Label layoutX="237.0" layoutY="419.0" text="Mã món ăn" />
-      <Label layoutX="459.0" layoutY="419.0" text="Tên món ăn" />
-      <Label layoutX="237.0" layoutY="450.0" text="Số người / phần" />
-      <Label layoutX="236.0" layoutY="479.0" text="Nguyên liệu" />
-      <Label layoutX="30.0" layoutY="569.0" text="Mô tả món ăn" />
-      <TextField fx:id="txtMaMA" editable="false" layoutX="345.0" layoutY="415.0" prefHeight="25.0" prefWidth="105.0" />
-      <TextField fx:id="txtTenMA" editable="false" layoutX="567.0" layoutY="415.0" prefHeight="25.0" prefWidth="171.0" />
-      <TextField fx:id="txtSoNguoi" editable="false" layoutX="345.0" layoutY="446.0" prefHeight="25.0" prefWidth="106.0" />
-      <TextArea fx:id="txtNguyenLieu" editable="false" layoutX="237.0" layoutY="505.0" prefHeight="56.0" prefWidth="381.0" wrapText="true" />
-      <TextArea fx:id="txtMoTaMA" editable="false" layoutX="29.0" layoutY="590.0" prefHeight="80.0" prefWidth="591.0" wrapText="true" />
-      <Label layoutX="459.0" layoutY="450.0" text="Đơn giá hiện tại" />
-      <TextField fx:id="txtDonGia" editable="false" layoutX="567.0" layoutY="446.0" />
-      <Label layoutX="722.0" layoutY="449.0" text="Đ" />
-      <TextArea fx:id="txtXuHuongAuto" editable="false" layoutX="766.0" layoutY="275.0" prefHeight="68.0" prefWidth="485.0" wrapText="true" />
+      <Separator layoutX="18.0" layoutY="422.0" prefHeight="7.0" prefWidth="733.0" />
+      <Label layoutX="793.0" layoutY="301.0" prefHeight="17.0" prefWidth="106.0" text="Doanh thu" />
+      <Label fx:id="lblSoPhanDD14" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="990.0" layoutY="275.0" prefHeight="17.0" prefWidth="78.0" text="99.999.999" />
+      <Label layoutX="766.0" layoutY="330.0" text="Nhận xét xu hướng:" />
+      <ImageView fx:id="imgHinhAnhMA" fitHeight="143.0" fitWidth="200.0" layoutX="26.0" layoutY="431.0" pickOnBounds="true" preserveRatio="true" />
+      <Label fx:id="lblDoanhThuMon7" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="1136.0" layoutY="300.0" prefHeight="17.0" prefWidth="105.0" text="99.999.999.999 Đ" />
+      <Label fx:id="lblDoanhThuMon14" alignment="CENTER_RIGHT" contentDisplay="RIGHT" layoutX="964.0" layoutY="300.0" prefHeight="17.0" prefWidth="105.0" text="99.999.999.999 Đ" />
+      <Label alignment="CENTER_RIGHT" layoutX="912.0" layoutY="228.0" prefHeight="17.0" prefWidth="156.0" text="Kỳ trước" />
+      <Label alignment="CENTER_RIGHT" layoutX="1091.0" layoutY="228.0" prefHeight="17.0" prefWidth="149.0" text="Kỳ này" textAlignment="RIGHT" />
+      <Label layoutX="237.0" layoutY="436.0" text="Mã món ăn" />
+      <Label layoutX="459.0" layoutY="436.0" text="Tên món ăn" />
+      <Label layoutX="237.0" layoutY="467.0" text="Số người / phần" />
+      <Label layoutX="236.0" layoutY="496.0" text="Nguyên liệu" />
+      <Label layoutX="30.0" layoutY="580.0" text="Mô tả món ăn" />
+      <TextField fx:id="txtMaMA" editable="false" layoutX="345.0" layoutY="432.0" prefHeight="25.0" prefWidth="105.0" />
+      <TextField fx:id="txtTenMA" editable="false" layoutX="567.0" layoutY="432.0" prefHeight="25.0" prefWidth="171.0" />
+      <TextField fx:id="txtSoNguoi" editable="false" layoutX="345.0" layoutY="463.0" prefHeight="25.0" prefWidth="106.0" />
+      <TextArea fx:id="txtNguyenLieu" editable="false" layoutX="237.0" layoutY="522.0" prefHeight="56.0" prefWidth="501.0" wrapText="true" />
+      <TextArea fx:id="txtMoTaMA" editable="false" layoutX="29.0" layoutY="602.0" prefHeight="68.0" prefWidth="708.0" wrapText="true" />
+      <Label layoutX="459.0" layoutY="467.0" text="Đơn giá hiện tại" />
+      <TextField fx:id="txtDonGia" editable="false" layoutX="567.0" layoutY="463.0" />
+      <Label layoutX="722.0" layoutY="465.0" text="Đ" />
+      <TextArea fx:id="txtXuHuongAuto" editable="false" layoutX="766.0" layoutY="357.0" prefHeight="68.0" prefWidth="485.0" wrapText="true" />
       <Button fx:id="btnXuatExcel" layoutX="938.0" layoutY="647.0" mnemonicParsing="false" onAction="#xuatFileExcel" prefHeight="25.0" prefWidth="205.0" text="Xuất báo cáo ra file Excel" />
+      <Label fx:id="lblNgay14" alignment="CENTER_RIGHT" layoutX="904.0" layoutY="247.0" prefHeight="17.0" prefWidth="164.0" text="1/6/2020 - 30/6/2020" />
+      <Label fx:id="lblNgay7" alignment="CENTER_RIGHT" layoutX="1084.0" layoutY="247.0" prefHeight="17.0" prefWidth="156.0" text="1/7/2020 - 31/7/2020" textAlignment="RIGHT" />
+      <Separator layoutX="18.0" layoutY="117.0" prefHeight="7.0" prefWidth="1242.0" />
+      <ComboBox fx:id="cmbChuKyNgay" layoutX="30.0" layoutY="51.0" prefHeight="25.0" prefWidth="200.0" />
+      <CheckBox fx:id="cbTuyChonKhoangNgay" layoutX="247.0" layoutY="55.0" mnemonicParsing="false" onAction="#coTuyChonKhoangNgay" prefHeight="17.0" prefWidth="156.0" text="Tùy chọn ngày tháng" />
+      <DatePicker fx:id="dpNgayFrom7" disable="true" layoutX="584.0" layoutY="50.0" />
+      <DatePicker fx:id="dpNgayTo7" disable="true" layoutX="855.0" layoutY="51.0" />
+      <DatePicker fx:id="dpNgayFrom14" disable="true" layoutX="584.0" layoutY="18.0" />
+      <DatePicker fx:id="dpNgayTo14" disable="true" layoutX="855.0" layoutY="19.0" />
+      <Label fx:id="lblKyTruocDo" disable="true" layoutX="409.0" layoutY="23.0" text="Kỳ trước đó" />
+      <Separator layoutX="394.0" layoutY="12.0" orientation="VERTICAL" prefHeight="39.0" prefWidth="9.0" />
+      <Label fx:id="lblKyNay" disable="true" layoutX="409.0" layoutY="54.0" text="Kỳ này" />
+      <Label fx:id="lblLuuYAdvanced" alignment="CENTER" layoutX="539.0" layoutY="83.0" prefHeight="27.0" prefWidth="508.0" text="Nếu không xác định kỳ trước, hệ thống tự chọn, chu kỳ liền kề trước đó cùng số ngày" visible="false" wrapText="true">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font>
+      </Label>
+      <Label fx:id="lblNgayFrom14" disable="true" layoutX="518.0" layoutY="22.0" prefHeight="17.0" prefWidth="63.0" text="Từ ngày" />
+      <Label fx:id="lblNgayFrom7" disable="true" layoutX="518.0" layoutY="54.0" prefHeight="17.0" prefWidth="63.0" text="Từ ngày" />
+      <Label fx:id="lblNgayTo14" disable="true" layoutX="768.0" layoutY="23.0" prefHeight="17.0" prefWidth="75.0" text="Đến ngày" />
+      <Label fx:id="lblNgayTo7" disable="true" layoutX="768.0" layoutY="54.0" prefHeight="17.0" prefWidth="75.0" text="Đến ngày" />
+      <Label fx:id="lblLuuYSimple" alignment="CENTER" layoutX="26.0" layoutY="83.0" prefHeight="27.0" prefWidth="508.0" text="Chu kỳ trước được tự chọn là chu kỳ liền kề trước đó cùng số ngày" wrapText="true">
+         <font>
+            <Font name="System Italic" size="12.0" />
+         </font>
+      </Label>
+      <Button fx:id="btnXoaTrang" layoutX="1091.0" layoutY="84.0" mnemonicParsing="false" onAction="#xoaTrang" prefHeight="17.0" prefWidth="106.0" text="Xóa trắng" />
    </children>
 </AnchorPane>
