--- a/src/view/BanDatManager.fxml
+++ b/src/view/BanDatManager.fxml
@@ -3,6 +3,7 @@
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -23,7 +24,7 @@
                         <Font size="18.0" />
                      </font>
                   </TextField>
-                  <TilePane alignment="CENTER" layoutY="410.0" prefHeight="39.0" prefWidth="301.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                  <TilePane alignment="CENTER" layoutY="484.0" prefHeight="39.0" prefWidth="301.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                      <children>
                         <Button fx:id="btnTimBanDat" mnemonicParsing="false" onAction="#timBanDat" style="-fx-background-color: #3F2B63;" text="Tìm kiếm" textFill="WHITE">
                            <graphic>
@@ -66,7 +67,7 @@
                         <Font size="18.0" />
                      </font>
                   </TextField>
-                  <TilePane alignment="CENTER" layoutX="1.0" layoutY="462.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                  <TilePane alignment="CENTER" layoutY="536.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                      <children>
                         <Button fx:id="btnShowAll" mnemonicParsing="false" onAction="#showAll" style="-fx-background-color: #3F2B63;" text="Hiện tất cả" textFill="WHITE">
                            <graphic>
@@ -78,6 +79,12 @@
                         </Button>
                      </children>
                   </TilePane>
+                  <ComboBox fx:id="cbTrangThaiBanDat" layoutX="11.0" layoutY="416.0" prefHeight="39.0" prefWidth="276.0" promptText="Tất cả" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="15.0" />
+                  <Label layoutX="10.0" layoutY="388.0" text="Trạng thái" textFill="WHITE">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
